Integrate BasicAds kmp wrapper

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ kotlin.native.disableCompilerDaemon=false
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Ensure important default jvmargs aren't overwritten. See https://github.com/gradle/gradle/issues/19750
-org.gradle.jvmargs=-Xmx6g -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:+UseStringDeduplication
+org.gradle.jvmargs=-Xmx6g -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:+UseStringDeduplication --enable-native-access=ALL-UNNAMED
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -63,3 +63,4 @@ xcodeproj=./iosApp
 
 # For SPM to work with Kotlin Multiplatform, we need to enable CInteropCommonization
 kotlin.mpp.enableCInteropCommonization=true
+spmforkmp.hideLocalPackageMessage=true
