--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ kotlin.native.disableCompilerDaemon=false
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Ensure important default jvmargs aren't overwritten. See https://github.com/gradle/gradle/issues/19750
-org.gradle.jvmargs=-Xmx6g -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:+UseStringDeduplication --enable-native-access=ALL-UNNAMED
+org.gradle.jvmargs=-Xmx6g -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:+UseStringDeduplication
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
