--- a/gradle.properties
+++ b/gradle.properties
@@ -63,3 +63,4 @@ xcodeproj=./iosApp
 
 # For SPM to work with Kotlin Multiplatform, we need to enable CInteropCommonization
 kotlin.mpp.enableCInteropCommonization=true
+spmforkmp.hideLocalPackageMessage=true
