--- a/insiderApp/src/main/AndroidManifest.xml
+++ b/insiderApp/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name="com.kevlina.budgetplus.insider.app.main.InsiderActivity"
             android:configChanges="colorMode|density|fontScale|keyboard|keyboardHidden|layoutDirection|locale|mcc|mnc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|touchscreen|uiMode|fontWeightAdjustment"
             android:exported="true"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:theme="@style/ComposeActivityStyle"
             android:windowSoftInputMode="adjustNothing">
 
