--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,6 +42,8 @@ permissions = "0.20.1"
 compottie = "2.0.2"
 # https://github.com/LexiLabs-App/basic-ads/releases
 admob-kmp = "1.1.0"
+# https://github.com/RevenueCat/purchases-kmp/releases
+revenuecat-kmp = "2.6.0+17.41.0"
 
 compileAndroidSdk = "36"
 minAndroidSdk = "26"
@@ -95,7 +97,6 @@ firebase-messaging = { module = "dev.gitlive:firebase-messaging", version.ref = 
 firebase-config = { module = "dev.gitlive:firebase-config", version.ref = "firebase-kmp" }
 google-ads = "com.google.android.gms:play-services-ads:25.0.0"
 google-ads-mediation-meta = "com.google.ads.mediation:facebook:6.21.0.1"
-google-billing = "com.android.billingclient:billing-ktx:8.3.0"
 google-id = "com.google.android.libraries.identity.googleid:googleid:1.2.0"
 google-play-review = "com.google.android.play:review-ktx:2.0.2"
 google-play-update = "com.google.android.play:app-update-ktx:2.1.0"
@@ -114,6 +115,7 @@ navigation3-ui = { module = "org.jetbrains.androidx.navigation3:navigation3-ui",
 navigation3-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycle-jb" }
 profile-installer = "androidx.profileinstaller:profileinstaller:1.4.1"
 reorderable = "sh.calvin.reorderable:reorderable:3.0.0"
+revenuecat-core = { module = "com.revenuecat.purchases:purchases-kmp-core", version.ref = "revenuecat-kmp" }
 test-uiautomator = "androidx.test.uiautomator:uiautomator:2.3.0"
 truth = "com.google.truth:truth:1.4.5"
 turbine = "app.cash.turbine:turbine:1.2.1"
