Move api key to buildkonfig

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -169,3 +169,4 @@ kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref 
 android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "gradle-plugin" }
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform" }
 spm-kmp = "io.github.frankois944.spmForKmp:1.4.8"
+buildkonfig = "com.codingfeline.buildkonfig:0.17.1"
