--- a/.github/workflows/publish-android-app.yml
+++ b/.github/workflows/publish-android-app.yml
@@ -41,10 +41,12 @@ jobs:
         env:
           KEYSTORE_ALIAS: ${{ secrets.KEYSTORE_ALIAS }}
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          REVENUECAT_API_KEY: ${{ secrets.REVENUECAT_API_KEY }}
         run: |
           echo KEYSTORE_PATH=./BudgetKey > ./local.properties
           echo KEYSTORE_ALIAS=$KEYSTORE_ALIAS >> ./local.properties
           echo KEYSTORE_PASSWORD=$KEYSTORE_PASSWORD >> ./local.properties
+          echo REVENUECAT_API_KEY=$REVENUECAT_API_KEY >> ./local.properties
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
