--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -55,7 +55,9 @@ jobs:
           export ARCHS=x86_64
           export PLATFORM_NAME=iphonesimulator
           export TARGET_DEVICE_FAMILY=1
-          ./gradlew :composeApp:embedAndSignAppleFrameworkForXcode --continue --quiet
+          export XCODE_VERSION_MAJOR=$(xcodebuild -version | grep Xcode | cut -d' ' -f2 | cut -d. -f1)
+          export BUILT_PRODUCTS_DIR=$(pwd)/composeApp/build/xcode-frameworks/Debug/iphonesimulator
+          ./gradlew :composeApp:embedAndSignAppleFrameworkForXcode --continue --stacktrace
 
       - name: Build iOS App
         run: |
