--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -51,7 +51,19 @@ jobs:
       - name: Prebuild composeApp framework (simulator)
         run: |
           SDK_VERSION=$(xcrun --sdk iphonesimulator --show-sdk-version)
-          export SDK_NAME="iphonesimulator${SDK_VERSION}"
+          SDK_PATH=$(xcrun --sdk iphonesimulator --show-sdk-path)
+          XCODE_VERSION=$(xcodebuild -version | head -n 1 | awk '{print $2}')
+          XCODE_VERSION_MAJOR=$(printf "%s" "$XCODE_VERSION" | cut -d. -f1)
+          XCODE_VERSION_MINOR=$(printf "%s" "$XCODE_VERSION" | cut -d. -f2)
+
+          export SDK_NAME="iphonesimulator"
+          export PLATFORM_NAME="iphonesimulator"
+          export EFFECTIVE_PLATFORM_NAME="-iphonesimulator"
+          export SDKROOT="$SDK_PATH"
+          export XCODE_VERSION_ACTUAL="$XCODE_VERSION"
+          export XCODE_VERSION_MAJOR="$XCODE_VERSION_MAJOR"
+          export XCODE_VERSION_MINOR="$XCODE_VERSION_MINOR"
+
           export CONFIGURATION=Debug
           export ARCHS="x86_64 arm64"
           export TARGET_BUILD_DIR="$PWD/build/Build/Products/Debug-iphonesimulator"
