--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -79,6 +79,9 @@ jobs:
           -scheme iosApp \
           -sdk iphonesimulator \
           -derivedDataPath ./build \
+          CODE_SIGNING_ALLOWED=NO \
+          CODE_SIGNING_REQUIRED=NO \
+          CODE_SIGN_IDENTITY="" \
           -verbose
 
       - name: Upload app folder
