--- a/.github/workflows/publish-ios-app.yml
+++ b/.github/workflows/publish-ios-app.yml
@@ -2,22 +2,25 @@ name: Publish iOS app to App Store
 
 on:
   release:
-    tags:
-      - '*-ios'
+    types: [published]
 
 jobs:
   build-and-publish:
+    # Only run for tags ending with '-ios'
+    if: endsWith(github.event.release.tag_name, '-ios')
     runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v6
 
-      - name: Extract version
-        id: extract_version
+      - name: Parse version from tag
+        id: version
         run: |
-          TAG_NAME=${GITHUB_REF#refs/tags/}
-          VERSION=${TAG_NAME%-ios}
-          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          TAG="${{ github.event.release.tag_name }}"
+          # Strip the '-ios' suffix to get the version
+          VERSION="${TAG%-ios}"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "Parsed version: $VERSION"
 
       - name: Setup JDK 21
         uses: actions/setup-java@v5
@@ -39,7 +42,44 @@ jobs:
           echo REVENUECAT_API_KEY=$REVENUECAT_API_KEY > ./local.properties
           echo $GOOGLE_SERVICES_PLIST | base64 -d > ./iosApp/iosApp/GoogleService-Info.plist
 
-      - name: Cache SPM downloads
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          DISTRIBUTION_CERTIFICATE_BASE64: ${{ secrets.IOS_DISTRIBUTION_CERTIFICATE_BASE64 }}
+          DISTRIBUTION_CERTIFICATE_PASSWORD: ${{ secrets.IOS_DISTRIBUTION_CERTIFICATE_PASSWORD }}
+          DISTRIBUTION_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_DISTRIBUTION_PROVISIONING_PROFILE_BASE64 }}
+          EXTENSION_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_EXTENSION_PROVISIONING_PROFILE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.IOS_KEYCHAIN_PASSWORD }}
+        run: |
+          # Create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          EXT_PP_PATH=$RUNNER_TEMP/build_ext_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # Decode from secrets
+          echo -n "$DISTRIBUTION_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$DISTRIBUTION_PROVISIONING_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+          echo -n "$EXTENSION_PROVISIONING_PROFILE_BASE64" | base64 --decode -o $EXT_PP_PATH
+
+          # Create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # Import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$DISTRIBUTION_CERTIFICATE_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # Apply provisioning profiles
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $EXT_PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      - name: Set JAVA_HOME for Xcode build phase
+        run: echo "export JAVA_HOME=$JAVA_HOME" > ./iosApp/.xcode.env
+
+      - name: Cache SPM packages
         uses: actions/cache@v4
         with:
           path: |
@@ -49,88 +89,76 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-spm-
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Run unit tests
-        run: ./gradlew test
-
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+      - name: Set version in Config.xcconfig
         run: |
-          # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          VERSION="${{ steps.version.outputs.version }}"
+          sed -i '' "s/^MARKETING_VERSION=.*/MARKETING_VERSION=$VERSION/" iosApp/Configuration/Config.xcconfig
+          sed -i '' "s/^CURRENT_PROJECT_VERSION=.*/CURRENT_PROJECT_VERSION=${{ github.run_number }}/" iosApp/Configuration/Config.xcconfig
+          echo "Updated Config.xcconfig:"
+          cat iosApp/Configuration/Config.xcconfig
 
-          # import certificate and provisioning profile from secrets
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
-
-          # create temporary keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          # import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          # apply provisioning profile
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-
-      - name: Build archive
+      - name: Archive iOS App
         run: |
-          xcodebuild -project iosApp/iosApp.xcodeproj \
+          xcodebuild archive \
+            -project iosApp/iosApp.xcodeproj \
             -scheme iosApp \
-            -sdk iphoneos \
             -configuration Release \
-            -archivePath $RUNNER_TEMP/iosApp.xcarchive \
-            archive \
-            MARKETING_VERSION=${{ steps.extract_version.outputs.VERSION }} \
-            CURRENT_PROJECT_VERSION=${{ github.run_number }}
+            -sdk iphoneos \
+            -destination 'generic/platform=iOS' \
+            -archivePath ./build/iosApp.xcarchive \
+            -skipPackagePluginValidation \
+            -quiet
 
       - name: Export IPA
-        env:
-          EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
         run: |
-          EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
-          echo -n "$EXPORT_OPTIONS_PLIST" | base64 --decode -o $EXPORT_OPTS_PATH
+          cat > ./build/ExportOptions.plist << 'EOF'
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>method</key>
+              <string>app-store-connect</string>
+              <key>destination</key>
+              <string>upload</string>
+          </dict>
+          </plist>
+          EOF
+
           xcodebuild -exportArchive \
-            -archivePath $RUNNER_TEMP/iosApp.xcarchive \
-            -exportOptionsPlist $EXPORT_OPTS_PATH \
-            -exportPath $RUNNER_TEMP/export
+            -archivePath ./build/iosApp.xcarchive \
+            -exportOptionsPlist ./build/ExportOptions.plist \
+            -exportPath ./build/output \
+            -quiet
 
-      - name: Upload app to TestFlight
+      - name: Upload to App Store Connect
         env:
-          APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
           APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
-          APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
+          APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
+          APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
         run: |
-          API_KEY_PATH=$RUNNER_TEMP/api_key.p8
-          echo -n "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 --decode -o $API_KEY_PATH
-          xcrun altool --upload-app --type ios \
-            -f $RUNNER_TEMP/export/iosApp.ipa \
-            --apiKey "$APP_STORE_CONNECT_API_KEY_ID" \
-            --apiIssuer "$APP_STORE_CONNECT_API_ISSUER_ID"
+          # Decode the API key
+          mkdir -p ./private_keys
+          echo -n "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 --decode -o "./private_keys/AuthKey_${APP_STORE_CONNECT_API_KEY_ID}.p8"
 
-      - name: Upload IPA artifact
-        if: always()
+          xcrun altool --upload-app \
+            --type ios \
+            --file "$(find ./build/output -name '*.ipa' -print -quit)" \
+            --apiKey "$APP_STORE_CONNECT_API_KEY_ID" \
+            --apiIssuer "$APP_STORE_CONNECT_ISSUER_ID"
+
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v6
         with:
-          name: ios-ipa
-          path: ${{ runner.temp }}/export/iosApp.ipa
+          name: ios-build-outputs
           retention-days: 7
+          path: |
+            ./build/output/*.ipa
+            ./build/iosApp.xcarchive/dSYMs
 
-      - name: Clean up keychain
-        if: always()
+      - name: Clean up keychain and provisioning profiles
+        if: ${{ always() }}
         run: |
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-          if [ -f "$KEYCHAIN_PATH" ]; then
-            security delete-keychain $KEYCHAIN_PATH
-          fi
+          security delete-keychain $RUNNER_TEMP/app-signing.keychain-db || true
+          rm -f ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision || true
+          rm -f ~/Library/MobileDevice/Provisioning\ Profiles/build_ext_pp.mobileprovision || true
+
