--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -15,8 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
         with:
-          # Fetch only the latest commit, instead of full git history
-          fetch-depth: 0
+          fetch-depth: 1
 
       - name: Setup JDK 21
         uses: actions/setup-java@v5
@@ -69,6 +68,4 @@ jobs:
           echo REVENUECAT_API_KEY=$REVENUECAT_API_KEY >> ./local.properties
 
       - name: Build with Gradle
-        run: |
-          ./gradlew :androidApp:assemble --continue --quiet
-          ./gradlew test detekt lint --continue --quiet
+        run: ./gradlew :androidApp:assemble test detekt lint --continue --quiet
