Setup iOS CI for pull requests and release (#520)
* Adjust publish-android-app.yml

* Add publish-ios-app.yml

* Add ios-ci.yml

* storyboard

* fix ios-ci

* more fixes

* more fixes

* more fixes

* more fixes

* more fixes

* more fixes

* m

* more fixes

* more fixes

* more fixes

* disable signing

* Integrate Fcm token flow

* Fresh attempt

* Support foreground notification

* fixes

* disable kotlin native incremental

* Fix notification deeplink handling

* Remove creation extras

* fix ViewModelGraphProvider.android.kt

* m

* improve caching in general

* Revert "Remove creation extras"

This reverts commit a87bf973a50b929fa42ae9d7c45bd33f3270b4bf.

* disable unusedGraphInputsSeverity

--- a/.github/workflows/publish-android-app.yml
+++ b/.github/workflows/publish-android-app.yml
@@ -2,10 +2,12 @@ name: Publish Android app to Google Play
 
 on:
   release:
-    types: [ released ]
+    types: [published]
 
 jobs:
   build-and-publish:
+    # Only run for tags ending with '-android'
+    if: endsWith(github.event.release.tag_name, '-android')
     runs-on: ubuntu-latest
 
     steps:
