--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -3,9 +3,10 @@ name: Android CI
 on:
   pull_request:
 
+# Cancel any current or previous job from the same PR
 concurrency:
-  group: 'ci-${{ github.event.merge_group.head_ref || github.head_ref }}-${{ github.workflow }}'
-  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+  group: android-ci-${{ github.head_ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -14,8 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
         with:
-          # Fetch only the latest commit, instead of full git history
-          fetch-depth: 0
+          fetch-depth: 1
 
       - name: Setup JDK 21
         uses: actions/setup-java@v5
@@ -68,9 +68,4 @@ jobs:
           echo REVENUECAT_API_KEY=$REVENUECAT_API_KEY >> ./local.properties
 
       - name: Build with Gradle
-        run: |
-          ./gradlew :androidApp:assemble --continue --quiet
-          ./gradlew :composeApp:compileKotlinIosSimulatorArm64 --continue --quiet
-          ./gradlew test detekt lint --continue --quiet
-        # Disable temporarily
-        # run: ./gradlew build --continue --quiet
+        run: ./gradlew :androidApp:assemble test detekt lint --continue --quiet
