--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -37,7 +37,7 @@ jobs:
           GOOGLE_SERVICES_PLIST: ${{ secrets.IOS_GOOGLE_SERVICES_PLIST }}
         run: |
           echo REVENUECAT_ANDROID_API_KEY=$REVENUECAT_ANDROID_API_KEY > ./local.properties
-          echo REVENUECAT_IOS_API_KEY=$REVENUECAT_IOS_API_KEY > ./local.properties
+          echo REVENUECAT_IOS_API_KEY=$REVENUECAT_IOS_API_KEY >> ./local.properties
           echo $GOOGLE_SERVICES_PLIST | base64 -d > ./iosApp/iosApp/GoogleService-Info.plist
 
       - name: Set JAVA_HOME for Xcode build phase
